# yolo-from-scratch

./: .gitignore  README.md  convert_coco_to_yolo.py  dataset.py  head.py  inference.py  myyolo.py  neck.py  pyproject.toml  train_yolo_on_coco.py  yolo_model_backbone.py
data/: data.py  data_conversion.py
models/: backbone.py  head.py  model.py  neck.py
utils/: hyperparams.yaml  print_visualize.py  util.py
